--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ line_length=88
 files=server
 ignore_missing_imports=true
 disallow_untyped_decorators=False
+plugins = sqlmypy
 
 [tool:pytest]
 markers =
@@ -16,7 +17,7 @@ markers =
 
 [main]
 jobs = 0
-py-version = 3.11
+py-version = 3.12
 
 [pylint]
 load-plugins =
@@ -32,6 +33,8 @@ load-plugins =
 disable =
     missing-module-docstring,
     missing-function-docstring
+    broad-except,
+    unscriptable,
 
 suggestion-mode = yes
 fail-under = 9.0
