--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,6 @@ redis = "5.0.4"
 asyncpg = "0.29.0"
 faker = "*"
 psycopg2-binary = "2.9.9"
-aioredis = "2.0.1"
 
 [dev-packages]
 mypy = "1.10.0"
@@ -25,6 +24,7 @@ pytest = "8.2.0"
 sqlalchemy-stubs = "*"
 pytest-cov = "*"
 pre-commit = "*"
+types-redis = "*"
 
 [requires]
 python_version = "3.12"
