--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,13 @@ repos:
       - id: black
         args: [--diff, --check]
 
+  -   repo: https://github.com/adamchainz/blacken-docs
+    rev: 1.16.0
+    hooks:
+    -   id: blacken-docs
+        additional_dependencies:
+        - black==22.12.0
+
   - repo: local
     hooks:
       - id: pylint
