--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
   "python.testing.pytestArgs": [],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "python.linting.pylintArgs": ["--rcfile=setup.cfg"]
+  "python.linting.pylintArgs": [
+    "--rcfile=setup.cfg"
+  ],
+  "cSpell.words": [
+    "uvicorn"
+  ]
 }
