--- a/Pipfile
+++ b/Pipfile
@@ -20,11 +20,13 @@ mypy = "1.10.0"
 isort = "5.13.2"
 pylint = "3.1.1"
 black = "24.4.2"
+blacken-docs="1.16.0"
 pytest = "8.2.0"
 sqlalchemy-stubs = "*"
 pytest-cov = "*"
 pre-commit = "*"
 types-redis = "*"
+fastapi-debug-toolbar = "0.6.3"
 
 [requires]
 python_version = "3.12"
