--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ DATABASE_HOST="db"
 DATABASE_PORT=5432
 
 DEBUG=true
+FASTAPI_ENV=dev
+
 DATABASE_URL_SYNC="postgresql+psycopg2://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
 DATABASE_URL="postgresql+asyncpg://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
 REDIS_URL="redis://localhost:6379/0"
