--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -9,10 +9,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: 3.13
       - run: pip install --upgrade pip
       - run: pip install pipenv
-      - run: pipenv install black mypy pylint
+      - run: pipenv install black mypy pylint isort
       - run: pipenv run black --diff --check $(git ls-files '*.py')
       - run: pipenv run pylint --disable=all --enable=unused-import $(git ls-files '*.py')
       - run: pipenv run mypy $(git ls-files '*.py')
